adguard/overlays/ssl/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard

spec:
  template:
    spec:
      containers:
      - name: adguard
        volumeMounts:
        - name: ssl-cert
          mountPath: /opt/adguardhome/cert
          readOnly: true
      volumes:
      - name: ssl-cert
        secret:
          secretName: adguard-ingress-cert
