adguard/overlays/ssl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  annotations:
    cert-manager.io/issuer: my-issuer

spec:
  tls:
  - hosts:
    - adguard
    secretName: adguard-ingress-cert
  rules:
  - host: adguard
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: adguard
              port:
                name: http
